kuber-homeworks/1.5/service_multitool.yml
apiVersion: v1
kind: Service
metadata:
  name: multitool
spec:
  selector:
    app: multitool
  ports:
    - name: multitool
      protocol: TCP
      port: 8080
      targetPort: 1180
